kibana.yaml
##################################################
# ELK Kibana Service
##################################################
apiVersion: v1
kind: Service
metadata:
  name: kibana-svc
  namespace: frontend-assignment
  labels:
    app: kibana
    kubernetes.io/name: "Kibana"
spec:
  type: NodePort
  ports:
  - port: 5601
    protocol: TCP
    targetPort: ui
    nodePort: 32061
  selector:
    app: kibana
---
##################################################
# ELK Kibana Deployment
##################################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana-dep
  namespace: frontend-assignment
  labels:
    app: kibana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kibana
  template:
    metadata:
      labels:
        app: kibana
    spec:
      containers:
      - name: kibana-dep
        image: docker.elastic.co/kibana/kibana:7.14.1
        resources:
          requests:
            cpu: 100m
            memory: "512Mi"
          limits:
            cpu: 1000m
            memory: "2Gi"
        ports:
        - containerPort: 5601
          name: ui
          protocol: TCP
---
##################################################
# ELK Kibana Ingress
##################################################
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: kibana-ingress
  namespace: frontend-assignment
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - hosts:
        - kibana.test.tuik.gov.tr
  rules:
    - host: kibana.test.tuik.gov.tr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kibana-svc
                port:
                  number: 5601
